# Dimensionality-Reduction

./: .gitignore  README.md  pruebas.ipynb
Lab1_Task 8-9-10/: solution.md
Lab1_Task1/: rectangular_matrix_a.ipynb  rectangular_matrix_a.md
Lab1_Task1/matrix/: rectangular_matrix.py
Lab1_Task11/: model.ipynb
Lab1_Task11/api/: README.md  app.py  cfg.env
Lab1_Task11/api/src/: predict.py  utils.py
Lab1_Task11/unsupervised/: PCA_np.py  TSNE_np.py
Lab1_Task2/: Picture.ipynb  Picture.md
Lab1_Task2/picture/: picture.py
Lab1_Task3/: Unsupervised.ipynb
Lab1_Task3/unsupervised/: PCA_np.py  SVD_np.py  TSNE_np.py  pyproject.toml
Lab1_Task4/: my_image.ipynb
Lab1_Task5/: mnist_lr.ipynb
Lab1_Task6/: mnist_my_methods.ipynb
Lab1_Task7/: sc_l_methods.ipynb
Lab1_Task9-10/: solution.md
