[tool.poetry]
name = "unsupervised"
version = "1.0"
description = "Dimensionality Reduction from numpy"
authors = ["DanielaAguiV <daniela.aguiar@udea.edu.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
